Prevent section from being collapsed if child is active

--- a/src/styles/layout/sidebar/styles.less
+++ b/src/styles/layout/sidebar/styles.less
@@ -205,6 +205,7 @@
       }
 
       &.open {
+        background: @sidebar-menu-item-open-background-color;
         color: @sidebar-menu-item-open-color;
       }
 
