--- a/src/styles/layout/sidebar/variables.less
+++ b/src/styles/layout/sidebar/variables.less
@@ -115,6 +115,7 @@
 // Open
 
 @sidebar-menu-item-open-color: @white;
+@sidebar-menu-item-open-background-color: color-lighten(@neutral, -20);
 
 /* Text Size */
 
